Compile `test-preview` modules and run 'em
Issue #139